# VecScoreDrawer

./: .gitignore  Cargo.toml  output.txt  readme.txt  sample.dsl  sample.vsc  tie_grouping_spec.md  todo.txt
score_workspace/: parsed_vsc.pvsc
score_workspace/score_def/: score_def.yaml
src/: cli.rs  convert.rs  data.rs  lib.rs  main.rs  parser.rs  processor.rs  render.rs
src/render/: input.rs  mod.rs
src/render/backend/: svg.rs
src/score/: README.md  data.rs  generator.rs  grouping.rs  layout_example.yaml  mod.rs  parser.rs  score_def.yaml  score_def_data.rs  structure.rs
src/vsc/: parser.rs
vsc_language/: Cargo.toml  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vsc_language/src/: extension.ts  main.rs
vsc_language/syntaxes/: vsc.tmLanguage.json
vsc_lsp/: extension.ts  package-lock.json  package.json  tsconfig.json
vsc_lsp/src/: main.rs
