[package]
name = "vec_score_drawer"
version = "0.1.0"
edition = "2021"

[dependencies]
printpdf = "0.8.0"
svg = "0.18.0"
rusttype = "0.9.0"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
anyhow = "1.0.0"
num-rational = "0.4.0"
num-traits = "0.2.19"
